crates/coglet/src/snapshots/coglet__health__tests__health_all_variants.snap
---
source: coglet/src/health.rs
expression: "[Health::Unknown, Health::Starting, Health::Ready, Health::Busy,\nHealth::SetupFailed, Health::Defunct,]"
---
[
  "UNKNOWN",
  "STARTING",
  "READY",
  "BUSY",
  "SETUP_FAILED",
  "DEFUNCT"
]
