crates/coglet/src/snapshots/coglet__health__tests__health_response_all_variants.snap
---
source: coglet/src/health.rs
expression: "[HealthResponse::Unknown, HealthResponse::Starting, HealthResponse::Ready,\nHealthResponse::Busy, HealthResponse::SetupFailed, HealthResponse::Defunct,\nHealthResponse::Unhealthy,]"
---
[
  "UNKNOWN",
  "STARTING",
  "READY",
  "BUSY",
  "SETUP_FAILED",
  "DEFUNCT",
  "UNHEALTHY"
]
