crates/coglet/src/snapshots/coglet__health__tests__setup_status_all_variants.snap
---
source: coglet/src/health.rs
expression: "[SetupStatus::Starting, SetupStatus::Succeeded, SetupStatus::Failed,]"
---
[
  "starting",
  "succeeded",
  "failed"
]
